docker & postgres setup

--- a/config/.env
+++ b/config/.env
@@ -1,5 +1,8 @@
+NODE_ENV=dev
+
 POSTGRES_USER=sebastian
 POSTGRES_PASSWORD=sebastian
 POSTGRES_HOST=localhost
-POSTGRES_PORT=5432
-POSTGRES_DB_NAME=nest_api
+POSTGRES_PORT=5434
+
+API_SECRET_KEYS=abc,def
